# Chauvin

./: CMakeLists.txt  README.md  devices.json
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  Colors.qml  Device.cpp  Device.hpp  DeviceViewer.cpp  DeviceViewer.hpp  DevicesModel.cpp  DevicesModel.hpp  Style.js  main.cpp  main.qml  qml.qrc  qmldir
src/components/: ControlBar.qml  Device.qml  Footer.qml  Header.qml  LandingPage.qml  Payload.qml
tests/: CMakeLists.txt
